<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imagedau"
                android:layout_width="80dp"
                android:layout_height="80dp" />

            <ImageView
                android:id="@+id/imagethan"
                android:layout_width="80dp"
                android:layout_height="80dp" />

            <ImageView
                android:id="@+id/imagechan"
                android:layout_width="80dp"
                android:layout_height="80dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="50dp">

            <Button
                android:id="@+id/btndau"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daussk" />

            <Button
                android:id="@+id/btnthan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thanssk" />

            <Button
                android:id="@+id/btnchan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chanssk" />

            <Button
                android:id="@+id/btnkq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/kq"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/btnxoa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/vang"
                android:text="@string/xoa"
                android:textColor="@color/xanh" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="50dp">

            <Button
                android:id="@+id/btndaunar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daunar" />

            <Button
                android:id="@+id/btnthannar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thannar" />

            <Button
                android:id="@+id/btnchannar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/channar" />



        </LinearLayout>

    </LinearLayout>




        <android.support.v7.widget.RecyclerView
            android:id="@+id/recylerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </android.support.v7.widget.RecyclerView>



</LinearLayout>